--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
          <br><p id="SelText" >SELECT A TOOL</p>  
          <div class="Contents">
          <div  class="SBtnC">
-             <button class="SelectionButtons" id="SelBtn1" onclick="SelectedPage1()" draggable="false">SELECTION 1<div class="BtnFlash"></div></button>
+             <button class="SelectionButtons" id="SelBtn1" onclick="SelectedPage1()" draggable="false">CALCULATOR<div class="BtnFlash"></div></button>
              <button class="SelectionButtons" id="SelBtn2" onclick="SelectedPage2()" draggable="false">SELECTION 2<div class="BtnFlash"></div></button>
              <br>
              <button class="SelectionButtons" id="SelBtn3" onclick="SelectedPage3()" draggable="false">SELECTION 3<div class="BtnFlash"></div></button>
