--- a/SYSTEM/HTMLs/BasicCalculator/Device/Mobile/BasicCalculatorMobile.html
+++ b/SYSTEM/HTMLs/BasicCalculator/Device/Mobile/BasicCalculatorMobile.html
@@ -124,11 +124,12 @@
     position: fixed;
         height: 44px;
         width: 44px;
+        border:1px solid rgba(255,255,255,0.37);
         border-radius: 100px;
         user-select: none;
         transform: translate(-50%, -50%);
         top:50%;
-        left: 77%; /*31-7*/
+        left: 77%; /*30-77*/
 
   }
     .calcBtns{
@@ -291,7 +292,7 @@ if (turnOn){
 
 }
 else{
-    SwBtnMove.style.left = "31%";
+    SwBtnMove.style.left = "30%";
     SwBtnBgC.style.backgroundColor = "rgb(0, 151, 0)";
     turnOn = true;
 }
