--- a/SYSTEM/HTMLs/BasicCalculator/Device/Mobile/BasicCalculatorMobile.html
+++ b/SYSTEM/HTMLs/BasicCalculator/Device/Mobile/BasicCalculatorMobile.html
@@ -528,7 +528,7 @@ mainScreen.readOnly = true;
 
 
 
-document.querySelectorAll(".calcBtns").addEventListener("click", function() {
+document.getElementsByClassName("calcBtns").addEventListener("click", function() {
     navigator.vibrate([300, 100, 300]);
 });
 
