--- a/SYSTEM/HTMLs/BasicCalculator/Device/Mobile/BasicCalculatorMobile.html
+++ b/SYSTEM/HTMLs/BasicCalculator/Device/Mobile/BasicCalculatorMobile.html
@@ -246,7 +246,7 @@
         <div class="InnerBtnContainer">
      
         <div class="Mini_Led2">
-            <video  id="Mini_Led2_Video" autoplay controls loop>
+            <video  id="Mini_Led2_Video" autoplay  loop>
                 <source src="SYSTEM/Resources/Video/BinaryAnimation.mp4" type="video/mp4">
                
             </video>
