--- a/SYSTEM/HTMLs/BasicCalculator/Device/PC/BasicCalculatorPC.html
+++ b/SYSTEM/HTMLs/BasicCalculator/Device/PC/BasicCalculatorPC.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <header>
+        <title>Basic Calculator (PC)</title>
         <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
