--- a/SYSTEM/HTMLs/BasicCalculator/index.html
+++ b/SYSTEM/HTMLs/BasicCalculator/index.html
@@ -182,12 +182,8 @@
       }
     }
 
-    const sleep = (delay) => new Promise((resolve) => setTimeout(resolve, delay));
-
-    async () => {
-      await sleep(6000);
-      redirectBasedOnDevice();
-    }
+    setTimeout(redirectBasedOnDevice, 6000);
+    
   </script>
 
 
