--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
          <div class="Contents">
          <div  class="SBtnC">
              <button class="SelectionButtons" id="SelBtn1" onclick="SelectedPage1()" draggable="false">CALCULATOR<div class="BtnFlash"></div></button>
-             <button class="SelectionButtons" id="SelBtn2" onclick="SelectedPage2()" draggable="false">SELECTION 2<div class="BtnFlash"></div></button>
+             <button class="SelectionButtons" id="SelBtn2" onclick="SelectedPage2()" draggable="false">Binary To Decimal<div class="BtnFlash"></div></button>
              <br>
              <button class="SelectionButtons" id="SelBtn3" onclick="SelectedPage3()" draggable="false">SELECTION 3<div class="BtnFlash"></div></button>
              <button class="SelectionButtons" id="SelBtn4" onclick="SelectedPage4()" draggable="false">SELECTION 4<div class="BtnFlash"></div></button>
@@ -64,3 +64,4 @@
 </body>
 
 </html>
+
